# pyinterceptor

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
pyinterceptor/: __init__.py  exceptions.py
pyinterceptor/core/: __init__.py  _device.py  _hotkey.py  _interception.py  _ioctl.py  _keyboard.py  _mouse.py  _state.py  hotkey.py  input.py  interception.py  keyboard.py  mouse.py
pyinterceptor/defs/: __init__.py  _stroke.py  buttons.py  flags.py  keycodes.py  stroke.py
pyinterceptor/types/: __init__.py  keycodes.py  states.py  stroke.py
pyinterceptor/utils/: decorators.py
